--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="scroll-smoth">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="public/assets/icon.png" />
+    <link rel="icon" type="image/svg+xml" href="/assets/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Fonts Poppins -->
@@ -14,7 +14,7 @@
     />
     <title>Agib Pratama Wadriansyah</title>
   </head>
-  <body class="bg-zinc-900 text-white">
+  <body class="bg-zinc-900 text-white" id="beranda">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
