--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     />
     <title>Agib Pratama Wadriansyah</title>
   </head>
-  <body class="bg-zinc-900 text-white" id="beranda">
+  <body class="bg-slate-950 text-white" id="beranda">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
